[package]
name = "nacos_rust_client"
version = "0.1.4"
authors = ["heqingpan <heqingpan@126.com>"]
license = "MIT/Apache-2.0"
description = "nacos rust client"
repository = "https://gitee.com/hqp/nacos_rust_client"
readme = "README.md"
keywords = ["nacos", "client"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0"}
anyhow="1"
serde = "1"
serde_urlencoded = "0.6.1"
tokio = {version="1",features=["full"]}
rust-crypto="0.2.36"
