[package]
name = "nacos_rust_client"
version = "0.1.5"
authors = ["heqingpan <heqingpan@126.com>"]
license = "MIT/Apache-2.0"
description = "nacos rust client"
repository = "https://gitee.com/hqp/nacos_rust_client"
readme = "README.md"
keywords = ["nacos", "client"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version="0",features=["full"]}
anyhow="1"
serde = {version="1" ,features=["derive"]}
serde_urlencoded = "0.6.1"
serde_json="1"
tokio = {version="1",features=["full"]}
rust-crypto="0.2.36"
actix = "0"
log="*"
local_ipaddress = "0.1.3"
inner-mem-cache="0.1.3"
rand="0.8"
flate2 = "1.0"