[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[dev-dependencies]
nacos_rust_client = {path="../nacos_rust_client" }
anyhow="1"
serde = {version="1" ,features=["derive"]}
serde_urlencoded = "0.6.1"
serde_json="1"
tokio = {version="1",features=["full"]}
reqwest = { version = "0.11", features = ["json"] }
actix = "0.12"
log="0"
env_logger = "0.7"
local_ipaddress = "0.1.3"

[[example]]
name="config"
path = "config.rs"

[[example]]
name="naming_register"
path = "naming_register.rs"