[package]
name = "nacos-tonic-discover"
version = "0.3.2"
authors = ["heqingpan <heqingpan@126.com>"]
license = "MIT/Apache-2.0"
description = "nacos tonic discover "
repository = "https://github.com/heqingpan/nacos_rust_client"
readme = "README.md"
keywords = ["nacos", "tonic", "discover"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nacos_rust_client = { version = "0.3", path = "../nacos_rust_client" }
tonic = "0.7"
tower = "0.4"
actix = "0.12"
log = "0"
tokio = { version = "1", features = ["sync"] }
anyhow = "1"
lazy_static = "1.4"

