[package]
name = "nacos_rust_client"
version = "0.2.3"
authors = ["heqingpan <heqingpan@126.com>"]
license = "MIT/Apache-2.0"
description = "nacos rust client"
repository = "https://github.com/heqingpan/nacos_rust_client"
readme = "../README.md"
keywords = ["nacos", "client"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.6.1"
serde_json = "1"
tokio = { version = "1", features = ["net", "sync", "signal"] }
reqwest = { version = "0.11", features = ["json"], default-features = false }
rust-crypto = "0.2.36"
actix = "0.12"
log = "0"
local_ipaddress = "0.1.3"
inner-mem-cache = "0.1.3"
rand = "0.8"
flate2 = "1.0"
lazy_static = "1.4"
